--- a/public/stylesheets/mentat.css
+++ b/public/stylesheets/mentat.css
@@ -1,11 +1,14 @@
 body, input{
-	font-size: 20px;
+	font-size: 16px;
 	font-family: Muli;
 	padding-left: 5px;
 }
-.moduleContainer{
+.banner{
 	color: red;
 	font-size: 16px;
+}
+.header{
+
 }
 .workArea{
 	margin-top: 20px;
@@ -37,4 +40,8 @@ body, input{
 .number{
 	color: #A9A9A9;
 	width: 2% !important;
+}
+.documentsSelect{
+	font-size: 16px;
+	padding: 5px;
 }
