--- a/views/_scripts.jade
+++ b/views/_scripts.jade
@@ -2,4 +2,4 @@ script(type="text/javascript", src="/javascripts/jquery.js")
 script(type="text/javascript", src="/javascripts/jquery-ui.js")
 script(type="text/javascript", src="/javascripts/json2.js")
 script(type="text/javascript", src="/js/client.js")
-script(type="text/javascript", src="/javascripts/_module.js")
+script(type="text/javascript", src="/javascripts/_mentat.js")
