--- a/public/stylesheets/mentat.css
+++ b/public/stylesheets/mentat.css
@@ -2,7 +2,7 @@ body, input{
 	font-size: 16px;
 	font-family: Muli;
 	padding-left: 5px;
-	background-color: #ECFAEB;
+	background-color: #EDFAF1;
 }
 .banner{
 	color: red;
@@ -13,11 +13,7 @@ body, input{
 	float: left;
 	width: 100%;
 }
-.workArea input{
-	width: 500px;
-}
 .workArea span{
-	width: 500px;
 	cursor: pointer;
 }
 .edit-in-place {
@@ -26,14 +22,13 @@ body, input{
 	float: left;
 }
 .edit-in-place input{
-	width: 500px;
 	display: none;
-	width: 97%;
+	width: 50%;
+	background-color: #E8F0FA;
 }
 .edit-in-place span{
 	display: inline;
-	width: 97%;
-	height: 20px;
+	width: 50%;
 	float: left;
 }
 .number{
@@ -45,14 +40,14 @@ body, input{
 	padding: 5px;
 	color: green;
 }
-.indent{
-	margin-left: 30px;
-}
-.mover{
-	padding: 5px;
-	cursor: pointer;
-}
 .isSelected {
-	color: #1DAB0E;
+	color: #C345F5;
 	font-weight: bold;
+}
+.dividingLine{
+	width: 100%;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	float:left;
+	border-bottom: 1px solid #09CBE0
 }
